[feat]: handle with share favorite movies in backend
