# backend/src/routes/user.routes.ts
@@ -6,13 +6,17 @@ import {
   getFavoritesController,
   getFavoritesIdsController,
 } from "../controller/favorite";
+import { createLinkShareFavoritesController } from "../controller/favorite/create-link-share-favorites-controller";
 
 const userRouter = Router();
 
 userRouter.post("/register", registerUserController);
+
 userRouter.post("/favorites", addFavoriteController);
 userRouter.get("/favorites", getFavoritesController);
 userRouter.get("/favorites/ids", getFavoritesIdsController);
 userRouter.delete("/favorites/:movieId", deleteFavoriteController);
+
+userRouter.post("/favorites/share", createLinkShareFavoritesController);
 
 export default userRouter;
